Enable boostsecurity.io Workflow
Define a new GitHub Action workflow which will scan the source code using the
boostsecurity.io security scanner and upload to the boostsecurity.io platform

--- a/.github/workflows/boost.yml
+++ b/.github/workflows/boost.yml
@@ -11,7 +11,7 @@ on:
         required: true
 
 jobs:
-  boost-scanners:
+  boost-scanner:
     if: github.event.inputs.job_name == ''
     name: ${{fromJSON(github.event.inputs.scan_params).scanner_name}}
     runs-on: ubuntu-latest
